--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 17
-      - name: Build
+      - name: Test
         run: ./gradlew allTests
