--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,13 +10,15 @@ minecraft-server = "3.2.1"
 
 # Libraries
 kotlinx-serialization = "1.8.0"
+kotlinpoet = "2.0.0"
 clikt = "5.0.3"
 spigot-api = "1.19.4-R0.1-SNAPSHOT"
 packetevents = "2.7.0"
 
 [libraries]
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
-kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization"}
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+kotlinpoet = { group = "com.squareup", name = "kotlinpoet", version.ref = "kotlinpoet" }
 clikt = { group = "com.github.ajalt.clikt", name = "clikt", version.ref = "clikt" }
 spigot-api = { group = "org.spigotmc", name = "spigot-api", version.ref = "spigot-api" }
 packetevents-spigot = { group = "com.github.retrooper", name = "packetevents-spigot", version.ref = "packetevents" }
